--- a/recipes/chicken-parm.html
+++ b/recipes/chicken-parm.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chicken Parmigiano</title>
+    <title>Chicken Parmesean</title>
 </head>
 <body>
-    <h1>Chicken Parmigiano</h1>
+    <h1>Chicken Parmesean</h1>
 </body>
 </html>
