Create two more recipe pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href='./recipes/chicken-parm.html''>Chicken Parmigiano</a>
+    <ul>
+        <li><a href='./recipes/chicken-parm.html''>Chicken Parmesean</a></li>
+        <li><a href='./recipes/breakfast-tacos.html'>Breakfast Tacos</a></li>
+        <li><a href='./recipes/rice-and-beans.html'>Rice and Beans</a></li>
+    </ul>
 </body>
 </html>
