Edit image sizes

--- a/recipes/chicken-parm.html
+++ b/recipes/chicken-parm.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chicken Parmesean</h1>
-    <img src='https://assets.bonappetit.com/photos/5ea8f0df16738800085ad5d2/16:9/w_2560%2Cc_limit/Chicken-Parmesean-Recipe-Lede.jpg' alt='top down view of chicken parmesean on a white plate with knife and fork; photo by Emma Fishman'>
+    <img src='https://assets.bonappetit.com/photos/5ea8f0df16738800085ad5d2/16:9/w_2560%2Cc_limit/Chicken-Parmesean-Recipe-Lede.jpg' alt='top down view of chicken parmesean on a white plate with knife and fork; photo by Emma Fishman' width='400'>
     <h2>Description</h2>
     <p>Chicken Parmesean is a classic comfort food enjoyed by many, including me! It's rich and filling, with all the flavor of Italian-American cuisine and all the joy of fried chicken.</p>
     <p>Even ten years later, I can remember so vividly the feeling of getting out of soccer practice on a weekday afternoon, hot and sweaty and <em>oh so hungry</em>. I would climb into my mom's car and be greeted by a tupperware full of food, steaming hot and smelling of rich, fragrant tomato sauce.</p>
