--- a/recipes/breakfast-tacos.html
+++ b/recipes/breakfast-tacos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Breakfast Tacos</h1>
-    <img src='https://www.simplyrecipes.com/thmb/jkyT2OoBdL9c_E3SKVuoXkXgWCU=/960x0/filters:no_upscale():max_bytes(150000):strip_icc()/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2019__04__breakfast_tacos_HERO0007-4b360aeece734b2b8906e4c41e3e55aa.jpg' alt='three chorizo and egg tacos on a plate with sliced lime'>
+    <img src='https://www.simplyrecipes.com/thmb/jkyT2OoBdL9c_E3SKVuoXkXgWCU=/960x0/filters:no_upscale():max_bytes(150000):strip_icc()/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2019__04__breakfast_tacos_HERO0007-4b360aeece734b2b8906e4c41e3e55aa.jpg' alt='three chorizo and egg tacos on a plate with sliced lime' width='400'>
     <h2>Description</h2>
     <p>Looking at this right now, I can so clearly see a vision of my 10 year old self with scrunched nose and skeptical expression: "Egg on a taco???"</p>
     <p>Now it seems obvious, but I have to admit that not having grown up with a lot of Mexican food, I was a late convert, and now I can only imagine how much more good food there would be in my life if I had only known sooner.</p>
