Add ingredients and steps for chicken

--- a/recipes/chicken-parm.html
+++ b/recipes/chicken-parm.html
@@ -13,5 +13,27 @@
     <p>Chicken Parmesean is a classic comfort food enjoyed by many, including me! It's rich and filling, with all the flavor of Italian-American cuisine and all the joy of fried chicken.</p>
     <p>Even ten years later, I can remember so vividly the feeling of getting out of soccer practice on a weekday afternoon, hot and sweaty and <em>oh so hungry</em>. I would climb into my mom's car and be greeted by a tupperware full of food, steaming hot and smelling of rich, fragrant tomato sauce.</p>
     <p>To be honest, just writing that memory gets my stomach rumbling. No time to waste - <strong>let's cook!</strong></p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>chicken breast</li>
+        <li>panko bread crumbs</li>
+        <li>egg</li>
+        <li>flour</li>
+        <li>vegetable oil</li>
+        <li>tomato sauce</li>
+        <li>parmagiano reggiano cheese</li>
+        <li>mozzarella cheese</li>
+        <li>spaghetti</li>
+        <li>basil</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Coat the chicken in flour, egg and finally in seasoned panko bread crumbs</li>
+        <li>Fry chicken in oil on medium heat until golden brown</li>
+        <li>Cook spaghetti in a pot of generously salted water until al dente</li>
+        <li>Cover chicken in tomato sauce, basil, and top with thick slices of mozzarella, finishing with a sprinkling of grated parmagiano reggiano</li>
+        <li>Bake in oven until cheese is melted</li>
+        <li>Plate chicken on top of a bed of spaghetti, add additional sauce and cheese if necessary, with salt and pepper to taste</li>
+    </ol>
 </body>
 </html>
