Edit chicken description

--- a/recipes/chicken-parm.html
+++ b/recipes/chicken-parm.html
@@ -12,7 +12,7 @@
     <h2>Description</h2>
     <p>Chicken Parmesean is a classic comfort food enjoyed by many, including me! It's rich and filling, with all the flavor of Italian-American cuisine and all the joy of fried chicken.</p>
     <p>Even ten years later, I can remember so vividly the feeling of getting out of soccer practice on a weekday afternoon, hot and sweaty and <em>oh so hungry</em>. I would climb into my mom's car and be greeted by a tupperware full of food, steaming hot and smelling of rich, fragrant tomato sauce.</p>
-    <p>To be honest, just writing that memory gets my stomach rumbling. No time to waste - <strong>let's cook!</strong></p>
+    <p>To be honest, just recalling that memory gets my stomach rumbling. No time to waste - <strong>let's cook!</strong></p>
     <h2>Ingredients</h2>
     <ul>
         <li>chicken breast</li>
