Add ingredients and steps for tacos

--- a/recipes/breakfast-tacos.html
+++ b/recipes/breakfast-tacos.html
@@ -13,5 +13,23 @@
     <p>Looking at this right now, I can so clearly see a vision of my 10 year old self with scrunched nose and skeptical expression: "Egg on a taco???"</p>
     <p>Now it seems obvious, but I have to admit that not having grown up with a lot of Mexican food, I was a late convert, and now I can only imagine how much more good food there would be in my life if I had only known sooner.</p>
     <p>These days, Mexican breakfast tacos is an easy go-to meal that I can make for myself in no time at all - especially good in the early morning when I know that I need something filling but can't bring myself to think about it too hard. And reader, when the hot corn tortilla hits my tongue and the spicy chorizo spills out mixed with lime juice and hot sauce and way too much cotija, it's magic.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>corn tortillas</li>
+        <li>spicy chorizo</li>
+        <li>vegtable oil</li>
+        <li>egg</li>
+        <li>hot sauce</li>
+        <li>cotija cheese</li>
+        <li>lime</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Mince chorizo and pan fry with a small amount of vegetable oil</li>
+        <li>Scramble eggs, add salt and pepper as needed, and add to pan once chorizo is cooked</li>
+        <li>Once eggs are cooked, immediately remove from pan</li>
+        <li>Heat tortillas in residual oil</li>
+        <li>Plate egg and chorizo on tortillas, and serve with hot sauce and lime</li>
+    </ol>
 </body>
 </html>
