--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
         <ul>
-            <li><a href='./recipes/chicken-parm.html''>Chicken Parmesean</a></li>
+            <li><a href='./recipes/chicken-parm.html'>Chicken Parmesean</a></li>
             <li><a href='./recipes/breakfast-tacos.html'>Breakfast Tacos</a></li>
             <li><a href='./recipes/rice-and-beans.html'>Rice and Beans</a></li>
         </ul>
