Add reminders for future edits

--- a/recipes/rice-and-beans.html
+++ b/recipes/rice-and-beans.html
@@ -20,6 +20,7 @@
             <li>vegetable oil</li>
             <li>bacon (or bacon fat)</li>
             <li>white rice</li>
+            <!--later, I'll look up how to insert special characters so that I can add an accent mark here-->
             <li>sazon goya</li>
             <li>chicken bouillon</li>
             <li>sugar</li>
@@ -30,6 +31,7 @@
             <li>Add one part rice and one and one half parts water to pot, with salt and vegetable oil</li>
             <li>Heat on high until boiling, then turn temperature to low and continue to cook under pot lid</li>
             <li>Fry bacon in pan over low heat to release fat</li>
+            <!--note to add the accent mark here as well-->
             <li>Add sofrito, sazon, chicken bouillon and a splash of water to pan and cook down</li>
             <li>Turn heat to medium and add beans to pan</li>
             <li>Add equal parts sugar and red wine vinegar (only a pinch/splash of each)</li>
