Add basic styling to page headers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='./style.css'>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Cocina Marselena</h1>
         <ul>
             <li><a href='./recipes/chicken-parm.html'>Chicken Parmesean</a></li>
             <li><a href='./recipes/breakfast-tacos.html'>Breakfast Tacos</a></li>
